--- a/public/css/index.css
+++ b/public/css/index.css
@@ -214,7 +214,7 @@ input[type=number] { -moz-appearance:textfield; }
     background-color: var(--primary-color);
 }
 
-.main .principal-container .order-summary .order-status{
+.main .principal-container .order-summary .order-status-container{
     display: block;
     margin: 0 auto;
     max-width: 400px;
@@ -225,22 +225,22 @@ input[type=number] { -moz-appearance:textfield; }
     padding: 10px 12px 20px 12px;
 }
 
-.main .principal-container .order-summary .order-status .title-container .title{
+.main .principal-container .order-summary .order-status-container .order-status .title-container .title{
     font-size: 2.4rem;
     font-weight: 700;
 }
 
-.main .principal-container .order-summary .order-status .title-container .total-container{
+.main .principal-container .order-summary .order-status-container .order-status .title-container .total-container{
     display: flex;
     position: relative;
 }
 
-.main .principal-container .order-summary .order-status .title-container .total-container span{
+.main .principal-container .order-summary .order-status-container .order-status .title-container .total-container span{
     position: absolute;
     right: 0;
 }
 
-.main .principal-container .order-summary .order-status .title-container .button-container .btn-buy{
+.main .principal-container .order-summary .order-status-container .order-status .title-container .button-container .btn-buy{
     width: 100%;
     margin-top: 1rem;
     padding: 1.2rem 0;
@@ -252,71 +252,31 @@ input[type=number] { -moz-appearance:textfield; }
     cursor: pointer;
 }
 
+/*--------------------------------*/
+@media screen and (max-width: 700px) {
+    .main .principal-container .order-summary .order-status-container{
+        background-color: var(--primary-color);
+    }
 
+    .main .principal-container .order-summary .order-status-container .order-status .title-container .total-container{
+        display: block;
+    }
 
+    .main .principal-container .basket .basket-item .item-form .section-right{
+        display: initial;
+    }
 
-/* 
-.main .video {
-    width: 100%;
-    display: flex;
-    justify-content: center;
+    .main .principal-container .basket .basket-item .item-form .section-right .product-price{
+        margin-right: 0;
+        margin-bottom: 5rem;
+        text-align: end;
+    }
+
+    .main .principal-container .order-summary .order-status-container .order-status .title-container .total-container span{
+        position: initial;
+    }
+
 }
-
-.main .video video {
-    width: 600px;
-    height: 400px;
-    transition: .3s;
-}
-
-.main .container {
-    display: flex;
-    justify-content: center;
-    color: #fff;
-    flex-wrap: wrap;
-}
-
-.main .container .card {
-    width: 300px;
-    margin: 20px 10px;
-    transition: .3s;
-    border-radius: 25px;
-}
-
-.main .container .card:hover {
-    box-shadow: 0px 0px 20px rgba(19, 108, 165, 0.3);
-    transition: .3s;
-}
-
-.main .container .card__img {
-    width: 100%;
-    height: 40%;
-    overflow: hidden;
-}
-
-.main .container .card:hover .card__img img {
-    transform: scale(1.1);
-    transition: .3s;
-}
-
-.main .container .card__img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: .3s;
-}
-
-.main .container .card__text {
-    width: 100%;
-    height: 60%;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    font-weight: 300;
-    font-size: 15px;
-} */
-
-
 /*--------------------------------*/
 @media screen and (max-width: 425px) {
     .main .principal-container {
@@ -350,8 +310,13 @@ input[type=number] { -moz-appearance:textfield; }
     .main .principal-container .order-summary{
         width: 90%;
         margin: 5%;
+        margin-bottom: 100px;
         position: initial;
         top: initial;
+    }
+
+    .main .principal-container .order-summary .order-status-container{
+        border: 2px solid white;
     }
 
 }
